# desktop

./: Cargo.toml
assets/shaders/: cube_demo.wgsl
src/: main.rs
src/mwinit/: converters.rs  mod.rs  windows_voodoo.rs  winit_config.rs  winit_windows.rs
src/wallpaper_render_plugin/: mod.rs  windows_voodoo.rs  winit_config.rs  winit_windows.rs
