[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_prototype_lyon = "0.5.0"
heron = { version = "3.1.0", features = ["2d"] }
winit = { git = "https://github.com/rust-windowing/winit.git", branch = "master" }
raw-window-handle = "0.4.3"
approx = { version = "0.5.0", default-features = false }

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]
